# PyGPT

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.sh
src/pygpt/: __init__.py  __main__.py  client.py
