[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygpt"
version = "0.1.0"
description = "PyGPT – Session-token bridge for ChatGPT powered by PierringShot Electronics™."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "PierringShot Electronics™ (@pierringshot)" }
]
license = { file = "LICENSE" }
dependencies = [
  "setuptools>=65.5.0",
  "undetected-chromedriver>=3.2.1",
  "markdownify>=1.2.0"
]
keywords = ["chatgpt", "session-token", "automation", "selenium", "undetected-chromedriver"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pierringshot/pygpt"

[project.scripts]
pygpt = "pygpt.__main__:run_cli"
